# hydrogen-drumkits

./: CMakeLists.txt  README
3355606kit/: 606SNAR.flac  606bass.flac  606chat.flac  606cymb.flac  606ohatacc.flac  dr55hat.flac  dr55rim.flac  dr55snar.flac  rhythm33_bd.flac  rhythm33_ch.flac  rhythm33_cow.flac  rhythm33_oh.flac  rhythm33_sn.flac  rhythm33_tom.flac  tr606_high_tom.flac  tr606_low_tom.flac
BJA_Pacific/: BD_01.flac  BD_02.flac  BD_03.flac  BD_04.flac  BD_05.flac  BD_06.flac  BD_07.flac  BL_01.flac  BL_02.flac  BL_03.flac  BL_04.flac  CB2_01.flac  CB2_02.flac  CB2_03.flac  CB_01.flac  CB_02.flac  CB_03.flac  HH2_01.flac  HH2_02.flac  HH2_03.flac  HH2_04.flac  HH2_05.flac  HH2_06.flac  HH2_07.flac  HH2_08.flac  HH3_01.flac  HH3_02.flac  HH3_03.flac  HH3_04.flac  HH3_05.flac  HH_01.flac  HH_03.flac  HH_04.flac  HH_05.flac  HH_06.flac  HH_07.flac  HH_08.flac  RD2_01.flac  RD2_02.flac  RD2_03.flac  (+44 more)
Boss_DR-110/: dr110cht.flac  dr110clp.flac  dr110cym.flac  dr110kik.flac  dr110oht.flac  dr110snr.flac
Classic-626/: Classic-626_Agogo_Hi.flac  Classic-626_China_Cymbal.flac  Classic-626_Clap.flac  Classic-626_Conga_Hi.flac  Classic-626_Conga_Slap.flac  Classic-626_Cowbell.flac  Classic-626_Crash.flac  Classic-626_Hat_Closed.flac  Classic-626_Hat_Open.flac  Classic-626_Kick_2.flac  Classic-626_Ride_Cymbal.flac  Classic-626_Rim.flac  Classic-626_Snare_1.flac  Classic-626_Snare_2.flac  Classic-626_Tambourine.flac  Classic-626_Timbale_Hi.flac  Classic-626_Tom_1_Hi.flac  Classic-626_Tom_2_Hi.flac  Classic-626_Tom_2_Low.flac  Classic-626_Tom_2_Mid.flac  drumkit.xml
Classic-808/: Classic-808_Clap.flac  Classic-808_Clave.flac  Classic-808_Hat_long.flac  Classic-808_Hi_Tom.flac  Classic-808_Kick_short.flac  Classic-808_Lo_Tom.flac  Classic-808_Md_Conga.flac  Classic-808_Md_Tom.flac  Classic-808_Snare_lo3.flac  drumkit.xml
ColomboAcousticDrumkit/: README  bassdrum-4mics-br-stereo-normal3.flac  bassdrum-4mics-br-stereo-soft2.flac  bassdrum-4mics-br-stereo-soft4.flac  crash16i__ride2.flac  crash16i__ride_cup4.flac  crash20i__ride-cup1.flac  hihat-closed-1.flac  hihat-closed-4.flac  hihat-closed-6.flac  hihat-open-1.flac  hihat-open-4.flac  hihat-open-5.flac  hihat-semi-open-1.flac  hihat-semi-open-2.flac  snare-opaque-2mics_normal-shot1.flac  snare-opaque-normal-mic-normal_shot2.flac  snare-opaque-normal-mic-normal_shot3.flac  snare-opaque-normal-mic-rimshot2.flac  snare-opaque-normal-mic-rimshot6.flac  snare-opaque-normal-mic-rimshot7.flac  stick-rim-9.flac  tom-hi-1.flac  tom-low-1.flac  tom-mid-1.flac
DeathMetal/: 014b.flac  058.flac  059-3.flac  16239_ltibbits_china_A_China_High_16_high_vol.flac  16240_ltibbits_china_A_China_High_16_low_vol.flac  16243_ltibbits_china_oriental_trash_18_high_vol.flac  16244_ltibbits_china_oriental_trash_18_low_vol.flac  16248_ltibbits_crash_A_custom_18_high_vol.flac  16249_ltibbits_crash_A_custom_18_low_vol.flac  16253_ltibbits_crash_A_medium_17_high_vol.flac  16258_ltibbits_crash_HHXplosion_18_high_vol.flac  16259_ltibbits_crash_HHXplosion_18_low_vol.flac  16263_ltibbits_crash_Z_custom_projection_19_high_vol.flac  16264_ltibbits_crash_Z_custom_projection_19_low_vol.flac  16266_ltibbits_HH_A_Custom_closed_hard.flac  16267_ltibbits_HH_A_Custom_closed_soft.flac  16268_ltibbits_HH_A_Custom_foot1.flac  16269_ltibbits_HH_A_Custom_foot2.flac  16270_ltibbits_HH_A_Custom_foot3_release.flac  16273_ltibbits_HH_A_Custom_half_open_hard.flac  16274_ltibbits_HH_A_Custom_half_open_soft.flac  16277_ltibbits_ride_A_Ping_20_bell_2.flac  16278_ltibbits_ride_A_Ping_20_bell.flac  16279_ltibbits_ride_A_Ping_20_bow1.flac  16280_ltibbits_ride_A_Ping_20_bow2.flac  16282_ltibbits_splash_A_custom_10_high_vol.flac  16283_ltibbits_splash_A_custom_10_low_vol.flac  16284_ltibbits_splash_A_custom_10_med_vol.flac  16285_ltibbits_splash_zxt_flash_10_high_vol.flac  16286_ltibbits_splash_zxt_flash_10_low_vol.flac  16287_ltibbits_kick_high_vol.flac  16288_ltibbits_kick_low_vol.flac  16289_ltibbits_kick_med_vol.flac  16290_ltibbits_kick2_high_vol.flac  16291_ltibbits_kick2_low_vol.flac  16292_ltibbits_rim1_snare.flac  16297_ltibbits_sticks_low_pitch.flac  16298_ltibbits_snare_1_high_vol.flac  16299_ltibbits_snare_1_low_vol.flac  16310_ltibbits_tom_12_high_vol.flac  (+15 more)
EasternHop-1/: chh1.flac  chh2.flac  chh3.flac  chh4.flac  dr_tb_1.flac  dr_tb_2.flac  dr_tb_3.flac  dr_tb_4.flac  kk1.flac  kk2.flac  kk3.flac  lo-fi-cow.flac  sn1.flac  sn2.flac  sn3.flac  sn4.flac
ElectricEmpireKit/: EE_Clap.flac  EE_Clap_Hard.flac  EE_Click.flac  EE_Conga_1.flac  EE_Conga_2.flac  EE_Drum_1.flac  EE_Drum_2.flac  EE_Hat_Cl_Bs.flac  (+24 more)
(+408 files in other folders)
